2023-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/heif.c (ReadHEIFImage): For libheif versions <
	0x01090000, ignore_transformations is always 1. Add a conditional
	check to avoid Coverity 384803 "Logically dead code" for old
	versions.

	* coders/identity.c (ReadIdentityImage): Check the return value
	from AllocateImageColormap().  Addresses Coverity 384802
	"Unchecked return value".

	* magick/utility.c (ExpandFilename): sysconf() can return a
	negative value (e.g. -1).  Verify that the value is greater than 0
	before using it.  Addresses Coverity 384798 "Out-of-bounds
	access".

2023-08-09  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: 64 bytes for BMP header is reserved for OS/2
	https://www.fileformat.info/format/os2bmp/egff.htm

2023-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Re-indent/format for consistency.
	(ReadBMPImage): Adjust expected bmp_info.size (change 64 to 120).

2023-08-08  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Data behind declared BMP header should not be read.
	It could poison newly converted image with garbage.

2023-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cineon.c (GenerateCineonTimeStamp): Correct strlcpy()
	length arguments so they are based on the actual destination
	buffer size.  Based on a report from Dirk Müller
	<dmueller@suse.de> that the test suite does not pass with the new
	glibc 2.38 (which finally provides strlcpy()/strlcat()) due to a
	fortify assertion.

2023-08-08  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: CI chunk must have biSize only 12 or 40.

2023-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Default field pass count to 1
	since "Unsupported" tags return two arguments.

2023-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* jp2/src/libjasper/include/jasper/jas_types.h: MSVC 17.6.5 needs
	the _PFX_PTR definition.
