@@ -40,6 +40,9 @@
 <p>2023-08-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>coders/tiff.c (ReadTIFFImage): Fix garbled logic pertaining to
+photometric checks.  Addresses Coverity 393177 &quot;Structurally dead
+code&quot;.</p></li>
 <li><p>coders/heif.c (ReadHEIFImage): For libheif versions &lt;
 0x01090000, ignore_transformations is always 1. Add a conditional
 check to avoid Coverity 384803 &quot;Logically dead code&quot; for old
