@@ -1,5 +1,9 @@
 2023-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/tiff.c (ReadTIFFImage): Fix garbled logic pertaining to
+	photometric checks.  Addresses Coverity 393177 "Structurally dead
+	code".
+
 	* coders/heif.c (ReadHEIFImage): For libheif versions <
 	0x01090000, ignore_transformations is always 1. Add a conditional
 	check to avoid Coverity 384803 "Logically dead code" for old
